--- a/.github/workflows/NanoPi R2S Lean's OpenWrt.yml
+++ b/.github/workflows/NanoPi R2S Lean's OpenWrt.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   Build:
     runs-on: ubuntu-20.04
-    if: github.repository == 'DHDAXCW/NanoPi-R2S-2021'
+    if: github.repository == 'ephphpff/NanoPi-R2S-2021'
     outputs:
       OPENWRTROOT: ${{ steps.update.outputs.OPENWRTROOT }}
       PLATFORM: ${{ steps.compile.outputs.PLATFORM }}
