--- a/configs/lean/lean1.config
+++ b/configs/lean/lean1.config
@@ -28,6 +28,7 @@ CONFIG_PACKAGE_kmod-rtl8821ae=y
 CONFIG_PACKAGE_kmod-rtl88x2bu=y
 
 CONFIG_ALL_KMODS=y
+CONFIG_ALL_NONSHARED=y
 # CONFIG_IB=y
 # CONFIG_IB_STANDALONE=y
 # CONFIG_IMAGEOPT=y
