--- a/configs/lean/lean.config
+++ b/configs/lean/lean.config
@@ -163,17 +163,17 @@ CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 CONFIG_PACKAGE_luci-app-commands=y
-CONFIG_PACKAGE_luci-app-cpufreq
-CONFIG_PACKAGE_luci-app-cpulimit
+CONFIG_PACKAGE_luci-app-cpufreq=y
+CONFIG_PACKAGE_luci-app-cpulimit=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-rclone=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-softethervpn=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-udptools=y
+CONFIG_PACKAGE_luci-udptools=n
 CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-proto-minieap=y
+CONFIG_PACKAGE_luci-proto-minieap=n
 CONFIG_PACKAGE_luci-proto-bonding=y
 CONFIG_PACKAGE_luci-proto-openconnect=y
 CONFIG_PACKAGE_luci-proto-relay=y
@@ -203,9 +203,9 @@ CONFIG_LUCI_LANG_sv=y
 CONFIG_LUCI_LANG_tr=y
 CONFIG_LUCI_LANG_uk=y
 CONFIG_LUCI_LANG_vi=y
-CONFIG_LUCI_LANG_zh-tw=y
+CONFIG_LUCI_LANG_zh=y
 
-CONFIG_PACKAGE_AdGuardHome
+CONFIG_PACKAGE_AdGuardHome=y
 CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_baidupcs-web=y
 CONFIG_PACKAGE_coremark=y
@@ -222,15 +222,15 @@ CONFIG_PACKAGE_rsync=y
 CONFIG_PACKAGE_rsyncd=y
 CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_bind-host=y
-CONFIG_PACKAGE_mentohust=y
-CONFIG_PACKAGE_odhcp6c=n
+CONFIG_PACKAGE_mentohust=n
+CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_openssh-sftp-client=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_pandownload-fake-server=y
 CONFIG_PACKAGE_ppp-mod-pptp=y
 CONFIG_PACKAGE_xl2tpd=y
-CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_xray-plugin=y
+CONFIG_PACKAGE_xray-core=n
+CONFIG_PACKAGE_xray-plugin=n
 CONFIG_PACKAGE_ip6tables-extra=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
 
@@ -249,7 +249,7 @@ CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_shadow-chsh=y
+CONFIG_PACKAGE_shadow-chsh=n
 CONFIG_PACKAGE_vim-full=y
 CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_f2fsck=y
